tests/reference/run-array_size_02_cc-c7cec87.stderr
semantic error: dim has already been specified as a positional/keyword argument to size
 --> tests/errors/array_size_02_cc.f90:5:14
  |
5 |     size_a = size(a, 1, dim=1)
  |              ^^^^^^^^^^^^^^^^^ 

semantic error: dim has already been specified as a positional/keyword argument to size
 --> tests/errors/array_size_02_cc.f90:6:14
  |
6 |     size_a = size(a, dim = 1, 1)
  |              ^^^^^^^^^^^^^^^^^^^ 
